Support building with JDK 17