@@ -85,6 +85,7 @@
     <sonar.pluginClass>org.sonar.plugins.delphi.DelphiPlugin</sonar.pluginClass>
     <jacoco.dataFile.it>${basedir}/target/jacoco/jacoco-it.exec</jacoco.dataFile.it>
     <jacoco.outputDirectory.it>${basedir}/target/jacoco/report-it/</jacoco.outputDirectory.it>
+    <compiler.languageLevel>11</compiler.languageLevel>
     <lint.flags>-serial,-processing,-classfile</lint.flags>
     <!-- The UnicodeInCode rule has FPs in this project for mysterious reasons. There really aren't
           any unicode characters in code. -->
@@ -460,15 +461,26 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${compiler-plugin.version}</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
-          <showWarnings>true</showWarnings>
-          <showDeprecation>true</showDeprecation>
+          <source>${compiler.languageLevel}</source>
+          <target>${compiler.languageLevel}</target>
+          <showWarnings>false</showWarnings>
+          <showDeprecation>false</showDeprecation>
+          <fork>true</fork>
           <compilerArgs>
             <arg>-XDcompilePolicy=simple</arg>
             <arg>-Werror</arg>
             <arg>-Xlint:all,${lint.flags}</arg>
             <arg>-Xplugin:ErrorProne ${errorprone.flags}</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
